--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,3 +1,20 @@
 {
-  "title": "Bienvenido a Dynamic Framework + React"
+  "title": "Bienvenido a Dynamic Framework + React",
+  "states": {
+    "loading": "Cargando...",
+    "empty": {
+      "default": "No hay datos disponibles"
+    },
+    "error": {
+      "default": "Error al cargar los datos",
+      "retry": "Reintentar"
+    },
+    "boundary": {
+      "title": "Ocurrió un error inesperado",
+      "description": "Lo sentimos, algo salió mal. Puedes intentar las siguientes opciones:",
+      "retry": "Reintentar",
+      "reload": "Recargar página",
+      "details": "Detalles técnicos (solo desarrollo)"
+    }
+  }
 }
